# arts_und_tech

./: README.md  main.py  pyproject.toml
llm/: __init__.py  model.py
routers/: __init__.py  chat.py  home.py
v2/: image.py  main.py  requirements.txt
